--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "autoprefixer": "^10.4.17",
     "cheerio": "^1.0.0",
     "lucide-react": "^0.330.0",
-    "next": "^14.2.28",
+    "next": "^14.1.0",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "undici": "^7.8.0"
   }
 }
