--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "undici": "^7.8.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4"
   }
 }
