--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.17",
+    "axios": "^1.9.0",
     "cheerio": "^1.0.0",
     "lucide-react": "^0.330.0",
     "next": "^14.1.0",
