--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "cheerio": "^1.0.0",
     "lucide-react": "^0.330.0",
     "next": "^14.1.0",
+    "openai": "^4.96.0",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
+    "react-hot-toast": "^2.5.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "undici": "^7.8.0"
