--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cheerio": "^1.0.0",
     "lucide-react": "^0.330.0",
     "next": "^14.1.0",
+    "next-pwa": "^5.6.0",
     "openai": "^4.96.2",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
