--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "autoprefixer": "^10.4.17",
     "axios": "^1.9.0",
     "cheerio": "^1.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "lucide-react": "^0.330.0",
     "next": "^14.1.0",
     "next-pwa": "^5.6.0",
@@ -25,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "undici": "^7.8.0"
