--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.17",
     "axios": "^1.9.0",
     "cheerio": "^1.0.0",
@@ -30,7 +31,8 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
-    "undici": "^7.8.0"
+    "undici": "^7.8.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4"
