chore: rename app from Menoo to MUU everywhere

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Menoo",
-  "short_name": "Menoo",
+  "name": "MUU",
+  "short_name": "MUU",
   "description": "Find and explore restaurant menus nearby.",
   "start_url": "/",
   "display": "standalone",
