feat: update app branding and PWA support - Update app name to MUU - Add new SVG logo - Update app icons - Enable PWA support - Add icon generation script

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,29 @@
 {
   "name": "MUU",
   "short_name": "MUU",
-  "description": "Find and explore restaurant menus nearby.",
+  "description": "Accessible and personalized menus",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#F8F6F4",
-  "theme_color": "#E34114",
+  "background_color": "#ffffff",
+  "theme_color": "#6237FF",
   "icons": [
+    {
+      "src": "/icon.svg",
+      "sizes": "260x260",
+      "type": "image/svg+xml",
+      "purpose": "any"
+    },
     {
       "src": "/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
       "src": "/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     }
   ]
 } 
