--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@tailwindcss/line-clamp": "^0.4.4"
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "sharp": "^0.34.2"
   }
 }
