--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "firebase": "11.8.1",
+    "firebase-admin": "^13.4.0",
     "lucide-react": "^0.330.0",
     "next": "^14.1.0",
     "next-pwa": "^5.6.0",
