--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@radix-ui/react-switch": "^1.2.5",
     "@types/cheerio": "^0.22.35",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.57",
@@ -17,7 +20,7 @@
     "axios": "^1.9.0",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "firebase": "11.8.1",
     "firebase-admin": "^13.4.0",
     "lucide-react": "^0.516.0",
@@ -29,7 +32,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "undici": "^7.8.0",
@@ -37,7 +40,14 @@
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^14.3.1",
+    "@types/jest": "^29.5.14",
     "@types/uuid": "^10.0.0",
-    "sharp": "^0.34.2"
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "sharp": "^0.34.2",
+    "ts-jest": "^29.4.0"
   }
 }
