--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "prepare": "husky"
   },
   "dependencies": {
     "@radix-ui/react-switch": "^1.2.5",
@@ -44,6 +45,9 @@
     "@testing-library/react": "^14.3.1",
     "@types/jest": "^29.5.14",
     "@types/uuid": "^10.0.0",
+    "eslint": "^9.30.1",
+    "eslint-config-next": "^15.3.5",
+    "husky": "^9.1.7",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
